# Engine

./: .GitIgnore  Compile.bat  Core.sln  ReadMe.md
Client/: Client.sln
Client/Client/Source/: Client.vcxproj  Client.vcxproj.filters  Main.cpp
Client/Source/: Char.cpp  Char.h  Client.vcxproj  Client.vcxproj.filters  Config.h  InputKeyboard.cpp  InputKeyboard.h  Main.cpp  MiniDump.cpp  MiniDump.h  Network.cpp  Network.h  Network.hpp  PlayerChat.cpp  PlayerChat.h  Version.h
Core/: Commands.cpp  Commands.h  Commands.hpp  Config.h  Config.hpp  Core.vcxproj  Core.vcxproj.filters  Includes.h  Includes.hpp  Items.cpp  Items.h  Items.hpp  Lenght.h  Lenght.hpp  Main.cpp  Player.cpp
Core/Common/: Includes.hpp
Core/Game/Source/: Game.vcxproj  Game.vcxproj.filters  Items.cpp  Logs.cpp  Main.cpp
Core/Game/Source/MySQL/: Connector.cpp
Core/MySQL/: Connector.cpp  Connector.h
Server/: Server.sln
Server-Files/Database/: Conf.ini
Server/Common/: Include.hpp  Includes.hpp  O_Includes.hpp
Server/Game/Source/: Application.cpp  Auth.cpp  Auth.hpp  Command.cpp  Command.hpp  Commands.cpp  Commands.hpp  Game.vcxproj  Game.vcxproj.filters  Item.cpp  Item.hpp  Log.cpp  Main.cpp  Player.cpp  Player.hpp
Server/Source/: Auth.cpp  Auth.h  Auth.hpp  CMakeLists.txt  Char.cpp  Char.h  Command.cpp  Command.h  Command.hpp  Config.cpp  Config.h  FileManager.cpp  FileManager.h  Item.cpp  Item.h  Item.hpp  Log.cpp  Log.h  Log.hpp  Main.cpp  MySQL.cpp  MySQL.h  MySQL.hpp  Network.cpp  Network.h  Network.hpp  Packet.h  Packet.hpp  Player.cpp  Player.hpp  Server.vcxproj
(+14 files in other folders)
